pragma solidity 0.5.8;
pragma experimental ABIEncoderV2;

contract Constants {
    uint256 public constant DECIMALS = 18;
    uint256 public constant MULTIPLIER = 10**DECIMALS;
}
